feat: enable TypeScript by default
Enable TypeScript in the following UIs:

* CLI
* Vim plugins
  * ALE
  * CoC (untested)
  * nvim-lspconfig
* Visual Studio Code extension
* Web demo

Also document how to enable TypeScript in the following UIs:

* Emacs plugins
  * Flymake
* Sublime Text

The following UIs aren't working with TypeScript yet:

* Emacs plugins
  * Eglot https://github.com/quick-lint/quick-lint-js/issues/1146
  * Flycheck https://github.com/quick-lint/quick-lint-js/issues/1148
  * LSP Mode https://github.com/quick-lint/quick-lint-js/issues/1147
* Kate https://github.com/quick-lint/quick-lint-js/issues/1149

--- a/website/public/demo/index.ejs.html
+++ b/website/public/demo/index.ejs.html
@@ -133,10 +133,9 @@
 
       <ul class="checkbox-list">
         <li>
-          <!-- TODO(#690): Remove '(experimental)'. -->
           <label
-            ><input type="checkbox" id="enable-typescript" checked /> TypeScript
-            (experimental)</label
+            ><input type="checkbox" id="enable-typescript" checked />
+            TypeScript</label
           >
         </li>
         <li>
