--- a/website/public/index.ejs.html
+++ b/website/public/index.ejs.html
@@ -638,13 +638,8 @@ const language = "JavaScript";
             </tr>
             <tr>
               <th class="hide-in-mobile">TypeScript</th>
-              <td class="meh quick-lint-js has-link">
+              <td class="good quick-lint-js">
                 <span aria-label="yes">✅</span
-                ><span
-                  aria-label="experimental"
-                  title="experimental"
-                  class="footnote-marker"
-                  >&nbsp;*</span
                 ><span class="show-in-mobile"><br />TypeScript</span>
               </td>
               <td class="meh">
@@ -845,10 +840,6 @@ const language = "JavaScript";
           </tbody>
         </table>
         <figcaption>
-          <p>
-            <span aria-label="experimental footnote">*</span> feature is
-            experimental
-          </p>
           <p id="footnote-with-plugin">
             <span aria-label="planned with plugin">†</span> feature requires a
             plugin
