--- a/website/public/install/kate/common-configure.ejs.html
+++ b/website/public/install/kate/common-configure.ejs.html
@@ -19,6 +19,12 @@
         }
     }
 }</code></pre>
+<p>
+  TODO:
+  <a href="https://github.com/quick-lint/quick-lint-js/issues/1149"
+    >TypeScript support in Kate</a
+  >
+</p>
 
 <%#
 <!--
