--- a/website/public/install/sublime/common-configure.ejs.html
+++ b/website/public/install/sublime/common-configure.ejs.html
@@ -26,8 +26,7 @@
         "quick-lint-js": {
             "command": ["quick-lint-js", "--lsp-server"],
             "enabled": true,
-            "languageId": "javascript",
-            "syntaxes": ["Packages/JavaScript/JavaScript.sublime-syntax"]
+            "selector": "source.js | source.jsx | source.ts | source.tsx"
         }
     }
 }
@@ -40,8 +39,8 @@
   <img
     src="../lsp-config.png"
     alt="Sublime Text with LSP.sublime-settings open, showing closure-lsp and quick-lint-js settings"
-    width="1421"
-    height="571"
+    width="2292"
+    height="1066"
   />
   <figcaption>Example LSP settings for Sublime Text</figcaption>
 </figure>
