feat(website): announce version 3.0.0

--- a/website/public/license/index.ejs.html
+++ b/website/public/license/index.ejs.html
@@ -117,6 +117,7 @@
           "../rust-cargo.png",
           "../rust-crab.svg",
           "../sublime-text.svg",
+          "../typescript.svg",
           "../ubuntu.svg",
           "../vim.gif",
           "../vscode-codicon-error.svg",
